--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+    
+    <div class="hero">
+        <h1>THE COW</h1>
+    </div>
+
+    <div class="article">
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <span class="imp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, assumenda?
+        </span>Culpa fugit molestias hic unde doloribus, fugiat ducimus magni neque voluptate inventore iusto deserunt animi quasi, optio nesciunt quidem quia alias sit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci possimus doloribus placeat nisi distinctio explicabo cupiditate praesentium dolorum iste quasi deserunt earum voluptates dicta quisquam tempore maiores magnam consequuntur ut ab, vitae quis architecto quo? Earum reprehenderit perferendis dolor culpa laudantium atque maiores, velit maxime itaque temporibus illo facere neque, nisi officiis veniam eveniet doloribus ab, minus harum aperiam delectus fugit rerum? Quia illum veritatis vel, iusto nam quo, doloremque corrupti voluptas eius perferendis, facere similique velit assumenda reprehenderit odit quam perspiciatis ullam quod ad? Maiores quia magni, saepe velit at et tempora incidunt ducimus nesciunt, temporibus porro fugiat harum.</p>
+    
+    </div>
+
+
 </body>
 </html>
